--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vue-flag-list",
   "version": "1.0.1",
-  "description": "A Vue.js project",
+  "description": "A vue plugin for entering and selecting area code",
   "author": "guimin <guimin@shoplex.com>",
   "private": false,
   "main": "dist/vue-flag-list.min.js",
