--- a/package.json
+++ b/package.json
@@ -8,11 +8,18 @@
   "scripts": {
     "dev": "node build/dev-server.js",
     "start": "node build/dev-server.js",
-    "build": "node build/build.js",
-    "e2e": "node test/e2e/runner.js",
-    "test": "npm run e2e",
-    "lint": "eslint --ext .js,.vue src test/e2e/specs"
+    "build": "node build/build.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/linmoer/vue-flag-list"
+  },
+  "keywords": [
+    "vue",
+    "flag",
+    "code"
+  ],
+  "license": "MIT",
   "dependencies": {
     "vue": "^2.3.3"
   },
