--- a/package.json
+++ b/package.json
@@ -12,14 +12,20 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/linmoer/vue-flag-list"
+    "url": "git+https://github.com/linmoer/vue-flag-list.git"
   },
+  "files": [
+    "dist",
+    "src"
+  ],
   "keywords": [
     "vue",
     "flag",
-    "code"
+    "code",
+    "flag code"
   ],
   "license": "MIT",
+  "homepage": "https://github.com/linmoer/vue-flag-list#readme",
   "dependencies": {
     "vue": "^2.3.3"
   },
